# yk_analysis

./: .gitignore  analyse_shaders.py  export_shader_analysis_report.py  pyproject.toml
analysis_helpers/: db.py
yk_analysis/: __init__.py  analyse_shaders.py  export_shader_analysis_report.py  extension.json
yk_analysis/analysis_helpers/: data.py  vertex.py
yk_analysis/renderdoc/: __init__.py  analyse.py  ui.py
