[tool.poetry]
name = "yk-analysis"
version = "0.1.0"
description = ""
authors = ["Samuel Stark <samuel.winslow.stark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
types-pyside2 = "^5.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
